--- a/style.css
+++ b/style.css
@@ -86,3 +86,17 @@ h1 {
   text-align: center;
   font-size: 20px;
 }
+.director {
+  display: flex;
+  margin: 60px;
+  box-shadow: 10px 10px 40px grey;
+  padding: 50px;
+  border-radius: 20px;
+}
+
+.dricetor-box-1 img {
+  width: 80%;
+}
+.dir-p-txt {
+  font-size: 25px;
+}
