--- a/style.css
+++ b/style.css
@@ -100,3 +100,13 @@ h1 {
 .dir-p-txt {
   font-size: 25px;
 }
+footer {
+  text-align: center;
+  margin-top: 100px;
+  font-size: 25px;
+}
+#style-border {
+  border-top: 7px solid;
+  border-image: linear-gradient(tomato, orange);
+  border-image-slice: 1;
+}
